--- a/app/sass/base/_typography.scss
+++ b/app/sass/base/_typography.scss
@@ -1,9 +1,19 @@
-//@font-face {
-//  font-family: 'Museo Sans';
-//  src: url('../../fonts/MuseoSansCyrl-300.eot');
-//  src: url('../../fonts/MuseoSansCyrl-300.eot?#iefix') format('embedded-opentype'),
-//  url('../../fonts/MuseoSansCyrl-300.woff') format('woff'),
-//  url('../../fonts/MuseoSansCyrl-300.ttf') format('truetype');
-//  font-weight: 300;
-//  font-style: normal;
-//}
+@font-face {
+  font-family: 'HelveticaNeueCyr';
+  src: url('../../fonts/HelveticaNeueCyr-Roman.eot');
+  src: url('../../fonts/HelveticaNeueCyr-Roman.eot?#iefix') format('embedded-opentype'),
+  url('../../fonts/HelveticaNeueCyr-Roman.woff') format('woff'),
+  url('../../fonts/HelveticaNeueCyr-Roman.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'HelveticaNeueCyr';
+  src: url('../../fonts/HelveticaNeueCyr-Bold.eot');
+  src: url('../../fonts/HelveticaNeueCyr-Bold.eot?#iefix') format('embedded-opentype'),
+  url('../../fonts/HelveticaNeueCyr-Bold.woff') format('woff'),
+  url('../../fonts/HelveticaNeueCyr-Bold.ttf') format('truetype');
+  font-weight: bold;
+  font-style: normal;
+}
