--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -16,7 +16,7 @@ body,
 html {
   position: relative;
   overflow-x: hidden;
-  //font-family: 'Museo Sans', sans-serif;
+  font-family: 'HelveticaNeueCyr', sans-serif;
 }
 
 .pos-a {
@@ -25,4 +25,102 @@ html {
 
 .pos-r {
   position: relative;
+}
+
+.page-header {
+  margin: 35px auto 24px;
+  max-width: 1010px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  &__img {
+    display: block;
+    margin-right: 40px;
+  }
+
+  &__text {
+    color: #1C3B59;
+    text-transform: uppercase;
+    font-size: 26px;
+    line-height: 140.47%;
+  }
+}
+
+.breadcrumbs {
+  width: fit-content;
+  margin: 0 auto;
+  display: flex;
+  font-size: 18px;
+  line-height: 147.5%;
+
+  &__link {
+    color: #161616;
+    margin-right: 8px;
+  }
+
+  &__current {
+    color: rgba(#161616, .2);
+  }
+}
+
+.page-title {
+  margin-top: 24px;
+  text-align: center;
+  color: #161616;
+  font-weight: bold;
+  font-size: 36px;
+  line-height: 36px;
+  text-transform: uppercase;
+}
+
+.list {
+  margin-top: 117px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: flex-start;
+  max-width: 1208px;
+  margin-right: auto;
+  margin-left: auto;
+  width: 100%;
+
+  &__item {
+    flex: 0 0 310px;
+    margin-bottom: 75px;
+
+    &_img {
+      width: 100%;
+      height: 387px;
+      background-position: center;
+      background-size: cover;
+      margin-bottom: 32px;
+    }
+
+    &_caption {
+      position: relative;
+      padding-left: 19px;
+      color: #161616;
+      font-size: 23px;
+      line-height: 25px;
+      padding-bottom: 5px;
+      margin-bottom: 25px;
+
+      &:before {
+        position: absolute;
+        content: '';
+        left: 0;
+        width: 3px;
+        top: 3px;
+        bottom: 0;
+        background-color: #265D93;
+      }
+    }
+
+    &_text {
+      color: #636D76;
+      font-size: 16px;
+      line-height: 139.49%;
+    }
+  }
 }
